--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
     </style>
     <body>
-        <img src="Ec.png" alt="Italian Trulli" height="400">
+        <img src="EC.png" alt="Italian Trulli" height="400">
         <div class="csc">
             <h2>About Program</h2>
             <p>The Department has highly qualified and experienced faculty. The Curricula is designed with focus on the fundamentals enabling the students to undergo Experiential, Interactive, Collaborative, Computer based and Active learning to prepare them to be independent Life-long learners.</p>
